tests/golden/fixtures/syntax-symbolic-subscripts-err-aggregate-numeric-index/expected.err
Error: invalid index on symbolic subscript array 'foo': use '.field' or '[.field]'
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-aggregate-numeric-index/input.k65:6:5 ]
   │
 6 │     lda foo[1]
   │     ─────┬────  
   │          ╰────── here
   │ 
   │ Help: only named field access is allowed on symbolic subscript arrays
───╯
